[gd_scene load_steps=8 format=3 uid="uid://c84jc7f7aiyg7"]

[ext_resource type="Theme" uid="uid://ibl6ykiduv6w" path="res://resources/materials/balloon_dialogue.tres" id="1_cjn63"]
[ext_resource type="Script" uid="uid://f87s35aa5vwk" path="res://scripts/ui/control_ui_actinable.gd" id="2_yjfsr"]

[sub_resource type="CanvasTexture" id="CanvasTexture_yjfsr"]

[sub_resource type="Animation" id="Animation_g6vh0"]
resource_name = "Close"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(162, -0.25, 0, 0.266667, 0, 0, -0.366667, -3, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(38, -0.25, 0, 0.25, 0, 38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="Animation" id="Animation_yjfsr"]
resource_name = "Open"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.781839, 0, 162, -0.854908, 1, 0.25, 0),
"times": PackedFloat32Array(0, 0.993739)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(38, -0.25, 0, 0.25, 0, 38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.993739)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/TextureRect:size:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(163, -0.25, 0, 0.766667, 1.5, 1, -0.566667, -0.5, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/TextureRect:size:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(38, -0.25, 0, 0.25, 0, 38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_4o8x7"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/TextureRect:size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(163, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/TextureRect:size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6vh0"]
_data = {
&"Close": SubResource("Animation_g6vh0"),
&"Open": SubResource("Animation_yjfsr"),
&"RESET": SubResource("Animation_4o8x7")
}

[node name="ControlUI" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 163.0
offset_bottom = 39.0
theme = ExtResource("1_cjn63")
script = ExtResource("2_yjfsr")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 0
offset_bottom = 38.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_right = 163.0
offset_bottom = 38.0
texture = SubResource("CanvasTexture_yjfsr")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
keep_pressed_outside = true
text = "
"
flat = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 34
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Button/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Action" type="RichTextLabel" parent="Panel/Button/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "F"

[node name="TitreAction" type="RichTextLabel" parent="Panel/Button/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Interagir"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_g6vh0")
}

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
